--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DeathStarCalculator</title>
+  <title>Death Star</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/starwars.png">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <sw-root></sw-root>
+  <sw-container></sw-container>
 </body>
 </html>
